--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -67,9 +67,6 @@ body{
 
 /*****************SPLASHPAGE *****************************/
 .splash-photo{
-    /* height: 80vh;
-    width: 80vw;
-    margin-top: 100px; */
     background-image: url(/images/petclinic-splashpage.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -874,23 +871,21 @@ text {
     margin: 10px;
 }
 
-.user-info-container{
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-}
-
-.answer-info-container {
+.user-info-container, .answer-info-container {
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
-.answer-delete-edit-container {
+
+
+
+.answer-delete-edit-container, .question-delete-edit-container  {
     display: flex;
     align-items: center;
 }
 
-.answer-delete-edit-container a {
+.answer-delete-edit-container a,
+.question-delete-edit-container a{
     border: none;
     cursor: pointer;
     color: rgb(156, 156, 156);
@@ -898,7 +893,8 @@ text {
     margin-right: 18px;
 }
 
-.answer-delete-edit-container a:hover {
+.answer-delete-edit-container a:hover,
+.question-delete-edit-container a:hover {
     color: black;
 }
 
