--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -67,9 +67,9 @@ block content
                       div(class='answer-info-container')
                         div(class='answer-delete-edit-container')
                           if locals.user
-                            if locals.user.id === answer.userId
-                              a(class='edit-answer' id=`${answer.id}`) Edit
-                              a(class='delete-answer' id=`${answer.id}`) Delete
+                              if locals.user.id === answer.dataValues.userId
+                                a(class='edit-answer' id=`${answer.dataValues.id}`) Edit
+                                a(class='delete-answer' id=`${answer.dataValues.id}`) Delete
                         div(class='user-info')
                           p Answered By: #{userA.dataValues.username}
           include answers.pug
