redirect delte question

--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -71,5 +71,5 @@ block content
                                 a(class=`edit-answer` id=`${answer.id}`) Edit
                                 a(class="delete-answer" id=`${answer.id}`) Delete
                         div(class='user-info')
-                          //- p Answered By: #{userA.username}
+                          p Answered By: #{userA.username}
           include answers.pug
