--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -6,7 +6,7 @@ div(class='question-page')
                p PUBLIC
                div(class='q-link')
                  image(class='earth' src='/images/earth.png')
-                  a(href='/') Questions
+                  a(href='/questions') Questions
           div(class='questions-list-container')
              div(class='questions-box')
                  div(class='questions-header')
