--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -8,7 +8,7 @@ block content
           p PUBLIC
           div(class='q-link')
                  image(class='earth' src='/images/earth.png')
-                  a(href='/') Questions
+                  a(href='/questions') Questions
     div(class='question-container')
         div(class='question-box')
           div(class="question-header")
