--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -9,7 +9,7 @@ block content
               p PUBLIC
               div(class='q-link')
                  image(class='earth' src='/images/earth.png')
-                  a(href='/') Questions
+                  a(href='/questions') Questions
           div(class='user-homepage-right-container')
               div(class='profile-container')
                 div(class='profile-image-container')
