--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,12 +9,12 @@ html
         //- add page specific js
         script(src="/javascripts/index.js" type="module" defer)
         script(src="https://kit.fontawesome.com/85fa627211.js" crossorigin="anonymous")
-        meta(prefix="og: http://ogp.me/ns#" property="og:title" content="Hiep Khuu's Profile")
+        meta(prefix="og: http://ogp.me/ns#" property="og:title" content="PetClinic App")
         meta(prefix="og: http://ogp.me/ns#" property="og:type" content="Website")
         meta(meta prefix="og: http://ogp.me/ns#" property="og:image" content="
 		https://petclinic-overflow.herokuapp.com/public/images/petclinic-peek.jpg")
-        meta(prefix="og: http://ogp.me/ns#" property="og:url" content="https://hiepkhuu.github.io")
-        meta(name="description" property="og:description" content="Hiep Khuu's Profile App")
+        meta(prefix="og: http://ogp.me/ns#" property="og:url" content="https://petclinic-overflow.herokuapp.com/")
+        meta(name="description" property="og:description" content="Pet Clinic App")
 
 body
  div(class='alert-bar')
